(library
 (public_name dream.http)
 (name dream__http)
 (libraries
  digestif
  dream.certificate
  dream.cipher
  dream-pure
  dream.server
  dream-httpaf
  gluten
  gluten-lwt-unix
  h2
  h2-lwt-unix
  httpaf
  httpaf-lwt-unix
  lwt
  lwt.unix
  lwt_ssl
  ssl
  websocketaf
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))
